// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`issue-9260.mdx - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["mdx"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# title

<Parenthesis>

CR: Carriage Return, \\r
LF: Line Feed, \\n

</Parenthesis>

=====================================output=====================================
# title

<Parenthesis>

CR: Carriage Return, \\r
LF: Line Feed, \\n

</Parenthesis>

================================================================================
`;

exports[`multiline-comments.mdx - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["mdx"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# title

{/* prettier-ignore-start */}
export const Test = () => {
   return <p>test</p>;
 };
   <Test />
{/* prettier-ignore-end */}

{/* prettier-ignore-start */}

export const Test = () => {
   return <p>test</p>;
 };
   <Test />
{/* prettier-ignore-end */}

{/* prettier-ignore-start */}
export const Test = () => {
   return <p>test</p>;
 };
   <Test />

{/* prettier-ignore-end */}

{/* prettier-ignore-start */}

export const Test = () => {
   return <p>test</p>;
 };
   <Test />

{/* prettier-ignore-end */}

<!-- prettier-ignore-start -->
export const Test = () => {
   return <p>test</p>;
 };
   <Test />
<!-- prettier-ignore-end -->

=====================================output=====================================
# title

{/* prettier-ignore-start */}
export const Test = () => {
return <p>test</p>;
};

   <Test />
{/* prettier-ignore-end */}

{/* prettier-ignore-start */}

export const Test = () => {
   return <p>test</p>;
 };
   <Test />
{/* prettier-ignore-end */}

{/* prettier-ignore-start */}
export const Test = () => {
   return <p>test</p>;
 };
   <Test />

{/* prettier-ignore-end */}

{/* prettier-ignore-start */}

export const Test = () => {
   return <p>test</p>;
 };
   <Test />

{/* prettier-ignore-end */}

<!-- prettier-ignore-start -->

export const Test = () => {
   return <p>test</p>;
 };
   <Test />
<!-- prettier-ignore-end -->

================================================================================
`;

exports[`pull-11563.mdx - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["mdx"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# title

{ /* Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. */ }

{/* Some more. */}

=====================================output=====================================
# title

{/* Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. */}

{/* Some more. */}

================================================================================
`;
